# ChangeLog for media-libs/alsa-lib
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.392 2014/06/23 21:24:11 ssuominen Exp $

*alsa-lib-1.0.28 (23 Jun 2014)

  23 Jun 2014; Samuli Suominen <ssuominen@gentoo.org> +alsa-lib-1.0.28.ebuild,
  alsa-lib-1.0.27.2.ebuild:
  Version bump wrt #513670 by "PG". Use PYTHON_REQUIRED_USE wrt #509308 by
  Maciej Piechotka.

  28 Apr 2014; Michał Górny <mgorny@gentoo.org> alsa-lib-1.0.27.2.ebuild:
  Replace multilib_build_binaries with multilib_is_native_abi. The two are
  equivalent now, and the team has decided to use the old name as being less
  confusing.

  05 Apr 2014; Samuli Suominen <ssuominen@gentoo.org>
  -alsa-lib-1.0.26-r1.ebuild, -alsa-lib-1.0.27.1-r1.ebuild,
  -alsa-lib-1.0.27.1.ebuild, -files/1.0.25-extraneous-cflags.diff,
  -files/alsa-lib-1.0.27.1-rewind.patch:
  old

  05 Apr 2014; Agostino Sarubbo <ago@gentoo.org> alsa-lib-1.0.27.2.ebuild:
  Stable for sparc, wrt bug #498186

  05 Apr 2014; Agostino Sarubbo <ago@gentoo.org> alsa-lib-1.0.27.2.ebuild:
  Stable for alpha, wrt bug #498186

  05 Apr 2014; Agostino Sarubbo <ago@gentoo.org> alsa-lib-1.0.27.2.ebuild:
  Stable for ppc64, wrt bug #498186

  05 Apr 2014; Agostino Sarubbo <ago@gentoo.org> alsa-lib-1.0.27.2.ebuild:
  Stable for ppc, wrt bug #498186

  02 Mar 2014; Akinori Hattori <hattya@gentoo.org> alsa-lib-1.0.27.2.ebuild:
  ia64 stable wrt bug #498186

  23 Feb 2014; Pacho Ramos <pacho@gentoo.org> alsa-lib-1.0.27.2.ebuild:
  x86 stable, bug #498186

  22 Feb 2014; Markus Meier <maekke@gentoo.org> alsa-lib-1.0.27.2.ebuild:
  arm stable, bug #498186

  15 Feb 2014; Jeroen Roovers <jer@gentoo.org> alsa-lib-1.0.27.2.ebuild:
  Stable for HPPA (bug #498186).

  15 Feb 2014; Pacho Ramos <pacho@gentoo.org> alsa-lib-1.0.27.2.ebuild:
  amd64 stable, bug #498186

  04 Jan 2014; Michał Górny <mgorny@gentoo.org> alsa-lib-1.0.27.1-r1.ebuild,
  alsa-lib-1.0.27.2.ebuild: