@@ -4,17 +4,17 @@ Hash: SHA256
 DIST alsa-lib-1.0.27.2.tar.bz2 906844 SHA256 690ed393e7efd4fc7e3a2d2cda5449298ca0c895197e5914e350882012430d19 SHA512 3fa9160e001cf21ddc6332c3748f8aa27bd1b514616fd1a9993c34128fe99d07e2dfc5f1a9177e1c17456d1361496f90bf3552f940fd85c6ea5ac9bbc30fe8ce WHIRLPOOL d5df07a99abe4fe7842ef9fe2718148f17db0a182ef0315ec5c32e2ea20ea2a2da007f880dbc2954efc5a2d61dd5e92038a45d8172bee29d8af13532dcdd4afd
 DIST alsa-lib-1.0.28.tar.bz2 903786 SHA256 3c074b85dde1b30e78ef4995579765833e5b693fbbd8f834c335e080cb734a6d SHA512 a08430d0beb4a751b1608d148f4fc3d1077a689f5f7197b830a2768d66238b69de2614448d56643fbcb3141faa06ab361b7a8579cce4303304bce8c10de01f08 WHIRLPOOL db51ab59cfce545a4790c423a141846996d2fa2db7134b3cf17562e7e1d70bc4c56052edda9e6bfcd6f38ca9750f266bcec845b66c43402340f187a945a1098b
 EBUILD alsa-lib-1.0.27.2.ebuild 2069 SHA256 d55e1ecb5a38619d9f7b447e39cbe1045451eea3fbf7f6a4e7ad5a045787354a SHA512 5d283173f33065bb0897120eb378fae27e439ec600bb897b6ba1f6ad233ad0cd3f1300639eafd3b9a2ee19c4bc3aa87122b952d919397889ff8640f1fc465ce1 WHIRLPOOL 8f779c2289a0c7b4f214125f249d0782d61708368bdf566289b44f5b759218698eb361aadd9814ac99664a4474d543033eb0221d57adcded5f5f322009b6726e
-EBUILD alsa-lib-1.0.28.ebuild 2075 SHA256 9a40a7a5cbe9dbc11223dc4c8e33d935185daead3370d646995e88fa22a1e79d SHA512 b8587048ed4a31d17b807c345d5a6e5fbcef8ec7132d4dcf691dec1ad62eff9b26741752ad30b5f7d4ee2276fdc321f9bfe43ab97508e1921072d8889d5465b5 WHIRLPOOL 6e8f74e1a229efee5368222a6be834131e6cd7fe11c27c2a1e2d0b775a9de336129b5b9c46c4eea78ae8b1cff18cc0eb8d29c0c9fc8ab89c89a3a44e01c449a6
-MISC ChangeLog 58078 SHA256 ae80746b885bcb0ce2f73d2b6ebce6b916b513376df448db74d770aac7d7843d SHA512 3e6594d2853cc51dacb3ab01332ecca9f6d5c6a2e4bc9454bacb61e2309f5de1274c3d5b3f514afcabce06665082d523d47b03dd28780a7a82aee46c5b2d65b3 WHIRLPOOL 32eeb0ce3be991780086c58421408de01f988829246112aa353dde286640e2215e864a8e591943024c612a2a03004872341a283990dd3a4f7d317cd83d6b18aa
+EBUILD alsa-lib-1.0.28.ebuild 2217 SHA256 e1b2c2581f01e48a76121bdce3c3d505f865596a5d634cec26b85ab727c02901 SHA512 350ccf9ff5a0629ec1e09f1cb2d257c7680f4bcb2cc48357ad855128e45e9818cc121d82ad50542b8780f4d6d043b8e43023842478dc647301a42996a8eb5567 WHIRLPOOL 00234c6f175ab514d7f0de13b941d53e9d9e2412f8f15ca1f27c9eb814587623ddb4f3623cf1c010526d97c71d180b711c282e9cee4790e9fe3955d8dd4b7487
+MISC ChangeLog 58336 SHA256 f38bebd10095a0eb730483ea9b80680e737bab86e2d30d330b2f4c6f0c4fc1dd SHA512 94e8fba8a77527e1e93aea81a865db12a273c7b50cc94ded30652e5a3aeaa4baa56b6eb6a2260ae1e4347e860acf18b81135941a69688bb4934e4afd25c84f1f WHIRLPOOL 48f00eeacd422d88b5f2cfa0735cc397643551dd298f133cc75af7c5d20ec88dd18c3f13d30d8fb005197f694523f4a90cc73fb1f22173478aa385708be3dda0
 MISC metadata.xml 443 SHA256 2c3e6e0b3b3cfb7d4cd1b35cb092bc3e0fb60688f7aaedc29133408d00437fba SHA512 ba3c80c882e081177bf371ebd8d8fa3696f0cdd8c214333f4a5515e7d2997884ffddb56559ce51e818fdf8516af0529eaed01e6048f582feddc701d9f27bdb30 WHIRLPOOL 8537995f235dbfaf3c242868af177df5199762de1842f0f7085388dbe86e7821ffe137bb3ea6591d45a36bed5499128e7724a8675bff124b676994e723062a2b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTqJomAAoJEEdUh39IaPFNW8wH/iqT5tY6NHt43BbCgBAHFSo4
-bAsO6OYDTaSLsnllS/kTM7zyWozuC1SYJZFnGyPFEGvyNhnTKmFGxX6Ma3/FTxtE
-pOzpIbnnrtWS0yAZ1PMOzKSG808vjO4z3hto5UNvfxtFKqwVT2FAXVDjqla2tFoP
-+Dl+eHbKBQAhgltaVpaMt5+d2clddxXFgvmmxZcvGvmVYvVcWGVB8XGFl5jx4R1g
-XykH0rSQXXu2LY/xWhJyv2yh9Gv7gcz4BxqvdYqHLud+O/rUU1M0rCPHNJrCcMhL
-+q3RpHZJcdr0xEuXkSlDAiaSv3OP5kKmPqZopkO8VyeZ0MdS0y+6n5QwIs+ywgE=
-=eVn0
+iQEcBAEBCAAGBQJTqSA/AAoJEEdUh39IaPFN1w8H/1+JzqZGngs7W4gYAt+uzx1t
+mTTUl/HQ1iGU5gAoX6bzrBqYJuRHV7qctoQbP+1hUEsh8+j54918LpreqW2JHUrI
+6RhSdqTjqzxvRH0mvzcsL0uPwJ1d+F3//rQZEm4hYHGAYsW3JAHUqEme4b9COtE8
+rviHK7zjas43Avp27RjVlzFWWmqFq3i34rM5WLRYkYiQwMK/ktmPSbg6CJ00nkoC
+EwNIUTy+AqJvjIUPchGVC7aiV9aBXVyfUfW0bEaJnySHHH9PViD9lNmdjzwU592Z
+QzggL5n6PouIQgh4qQSaEakV0N3XxAwz+ro+Z7UcBSlhrQRTzse7vt3i9cY41KU=
+=tNCg
 -----END PGP SIGNATURE-----
