@@ -3,7 +3,7 @@ DEPEND=python? ( python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.
 DESCRIPTION=Advanced Linux Sound Architecture Library
 EAPI=5
 HOMEPAGE=http://www.alsa-project.org/
-IUSE=doc debug alisp python abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32 python_targets_python2_7 python_single_target_python2_7
+IUSE=alisp debug doc elibc_uclibc python abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32 python_targets_python2_7 python_single_target_python2_7
 KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~amd64-linux ~x86-linux
 LICENSE=LGPL-2.1
 RDEPEND=python? ( python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] ) abi_x86_32? ( !<=app-emulation/emul-linux-x86-soundlibs-20130224-r1 !app-emulation/emul-linux-x86-soundlibs[-abi_x86_32(-)] )
@@ -11,4 +11,4 @@ REQUIRED_USE=python? ( python_single_target_python2_7? ( python_targets_python2_
 SLOT=0
 SRC_URI=mirror://alsaproject/lib/alsa-lib-1.0.28.tar.bz2
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	eutils	025442f2eecab39ad0b4e541b6e142af	libtool	2964b38e7ad7f6998406386ad1c6dbcf	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	fac675dcccf94392371a6abee62d909f	multilib-build	02e68fc95064bb486c12ad2de16b8c82	multilib-minimal	5bbdc77877c1aa3c6bd89ca3f9196d11	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	6164ef644981c5dffdf4cf891caed613	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=c690bf0db1a97ae1c4068d902bd5c45d
+_md5_=de5abff9dcb0912ae549c80ef7eda803
