@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/alsa-lib
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.392 2014/06/23 21:24:11 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.394 2014/06/24 06:56:22 ssuominen Exp $
+
+  24 Jun 2014; Samuli Suominen <ssuominen@gentoo.org> alsa-lib-1.0.28.ebuild:
+  Sort IUSE alphabetically.
+
+  24 Jun 2014; Samuli Suominen <ssuominen@gentoo.org> alsa-lib-1.0.28.ebuild:
+  Disable "oldapi" test with elibc_uclibc wrt #509886 by René Rhéaume
 
 *alsa-lib-1.0.28 (23 Jun 2014)
 
